products/amliq/engines/quantumbeam/deployment/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: quantumbeam
  labels:
    name: quantumbeam
    environment: production
    app: quantumbeam-fraud-detection
